--- a/src/template.html
+++ b/src/template.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <title>PlotLab</title>
+  </head>
+  <body>
+    <div id="mainBody">
+      <canvas id="GraphArea" width="1400" height="910"></canvas>
+      <div></div>
+    </div>
+  </body>
 </html>
